@@ -25,6 +25,7 @@ public:
   public:
     CStdString m_strSectionName;
     long m_lReferenceCount;
+    DWORD m_lUnloadDelayStartTick;
   };
   class CDll
   {
@@ -42,7 +43,7 @@ public:
   static void Unload(const CStdString& strSection);
   static DllLoader *LoadDLL(const CStdString& strSection);
   static void UnloadDLL(const CStdString& strSection);
-  static void UnloadDLLsDelayed();
+  static void UnloadDelayed();
   static void UnloadAll();
 protected:
   vector<CSection> m_vecLoadedSections;
